aligned items correctly

--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -68,7 +68,6 @@ a:hover {
     margin-right: 2rem;
     width: 130px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -76,4 +75,88 @@ a:hover {
     background-color: #fff;
     padding: 10px;
     border-radius: 10px;
+} */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+header {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+.navbar {
+    margin: auto;
+    padding: 0.5rem 1.5rem;
+    margin-left: 2rem;
+
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+}
+
+
+.drop-down {
+    position: absolute;
+    list-style: none;
+    background: #fff;
+    border-radius: 0.7rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    padding: 20px;
+    margin-top: 15px;
+
+}
+
+.nav-link, .drop-down li {
+    list-style: none;
+    height: 100%;
+    padding: 0.3rem 0rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #808080;
+}
+
+a:hover {
+    color: black;
+}
+
+#dd-one {
+    margin-left: -4.5rem;
+}
+
+/* Login and Registration */
+.userAuth { 
+    margin-right: 1rem;
+    width: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.userAuth button {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+} 
